Initial tinkering with the settings and other forms.

--- a/linux/static/arduino.css
+++ b/linux/static/arduino.css
@@ -1,4 +1,5 @@
 
+
 .plot-placeholder
 {
     width : 100%;
@@ -10,3 +11,10 @@
 {
     padding-right: 10px;
 }
+
+/* Things in this class are hidden until we connect */
+.connected
+{
+    display : none;
+}
+
